# ProductGroupUpdater

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: example-request-bypass.json  example-request.json  example-response-200-success.json  example-response-400-assertion-mismatch.json  example-response-400-bad-request.json  example-response-403-partial-failure.json  example-response-409-concurrency.json  example-response-422-validation-error.json  example-response-500-server-error.json
scripts/: debug_datawindows.py  debug_endpoints.py  debug_entity_api.py  debug_full_save.py  debug_invloc_window.py  debug_item_window.py  debug_item_workflow.py  debug_p21.py  debug_retrieve.py  debug_row_change.py  debug_save_formats.py  debug_tools_save.py  debug_transaction_services.py  debug_transaction_update.py  verify_change.py
src/product_group_changer/: __init__.py  config.py  dependencies.py  main.py
src/product_group_changer/api/routes/: health.py  product_groups.py
src/product_group_changer/core/: exceptions.py  logging.py
src/product_group_changer/integrations/p21/: __init__.py  client.py  odata.py
src/product_group_changer/models/: schemas.py
src/product_group_changer/services/: product_group_service.py
tests/: conftest.py
tests/unit/: test_schemas.py
